compiler/testData/diagnostics/tests/secondaryConstructors/resolvePropertyInitializerWithoutPrimary.kt
// RUN_PIPELINE_TILL: SOURCE
class A {
    val prop: Int = <!TYPE_MISMATCH!>""<!>
    constructor()
}
